<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Peeker</string>


    <!-- Color picker activity -->
    <string name="activity_color_picker_label">Peeker</string>

    <!-- Color detail activity -->
    <string name="activity_color_detail_label">Detail</string>
    <string name="activity_color_detail_edit_text_dialog_fragment_title">Edit the name of the color</string>
    <string name="activity_color_detail_edit_text_dialog_fragment_positive_button">Edit</string>


    <!--  detail menu -->
    <string name="menu_palette_detail_action_share">Share</string>
    <string name="menu_palette_detail_action_edit">Edit</string>
    <string name="menu_palette_detail_action_delete">Delete</string>

    <!-- Color picker menu -->
    <string name="menu_color_picker_action_flash">Flash</string>
    <string name="nav_about_us">about us</string>
    <string name="license">license</string>
    <string name="nav_settings">settings</string>
    <string name="nav_saved">Starred</string>
    <string name="nav_home">Home</string>
    <string name="nav_support">support</string>


</resources>
