<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_image_colorize"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save"
            android:title="@string/nav_saved" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_save"
            android:title="@string/nav_support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_flash_off"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_license"
                android:title="@string/license" />
        </menu>
    </item>

</menu>